--- a/public/css/navbar.css
+++ b/public/css/navbar.css
@@ -46,10 +46,18 @@ Navbar em grid para poder usar o atributo auto para a imagem
 .navbar {
   display: grid;
   grid-template-columns: 1fr auto 1fr;
+  background-color: #1f101a;
 }
 
 .navbar img {
+  background-color: black;
   width: 100px;
+  border-radius: 20%;
+}
+
+#logo_img {
+  background-color: black;
+  border-radius: 20%;
 }
 
 .menu_1,
