--- a/public/css/projetos.css
+++ b/public/css/projetos.css
@@ -1,11 +1,28 @@
 .main {
+  padding-top: 20px;
   display: grid;
   grid-template-columns: 1fr 1fr 1fr;
 }
 
+a {
+  text-decoration: none;
+  color: black;
+}
+
 .item {
   display: flex;
-  justify-content: center;
   flex-direction: column;
+  margin: auto;
+  border: 1px solid black;
+  border-radius: 5px;
   align-items: center;
+  padding-bottom: 25px;
+  margin-bottom: 35px;
+}
+
+.item img {
+  width: 300px;
+  margin: auto;
+  padding: 10px;
+  border-radius: 5px;
 }
