--- a/public/css/importacao.css
+++ b/public/css/importacao.css
@@ -39,6 +39,8 @@ main {
   margin-right: 5px;
   font-size: 80%;
   align-items: center;
+  margin-left: 50px;
+  grid-row-gap: 15px;
 }
 
 #resultadoDescr {
