--- a/views/partials/navbar.html
+++ b/views/partials/navbar.html
@@ -11,7 +11,7 @@
   </div>
   <div id="navbarBasicExample" class="navbar-menu">
     <div class="navbar-start">
-      <a href="./index.html" class="navbar-item">
+      <a href="#" class="navbar-item">
         Início
       </a>
 
