--- a/public/css/bulma/bulma-0.9.4 (1)/bulma/sass/components/navbar.sass
+++ b/public/css/bulma/bulma-0.9.4 (1)/bulma/sass/components/navbar.sass
@@ -1,6 +1,6 @@
 @import "../utilities/mixins"
 
-$navbar-background-color: $scheme-main !default
+$navbar-background-color: transparent !default
 $navbar-box-shadow-size: 0 2px 0 0 !default
 $navbar-box-shadow-color: $background !default
 $navbar-height: 3.25rem !default
