--- a/public/css/navbar.css
+++ b/public/css/navbar.css
@@ -7,6 +7,7 @@ body,
   height: 100%;
 }
 
+
 .container {
   display: grid;
   grid-template-rows: auto 1fr auto;
@@ -20,6 +21,7 @@ body,
 
 .navbar a {
   text-decoration: none;
+  color: white;
 }
 
 /*
@@ -46,7 +48,6 @@ Navbar em grid para poder usar o atributo auto para a imagem
 .navbar {
   display: grid;
   grid-template-columns: 1fr auto 1fr;
-  background-color: #1f101a;
 }
 
 .navbar img {
