--- a/views/partials/navbar.html
+++ b/views/partials/navbar.html
@@ -1,7 +1,7 @@
 <nav class="navbar" role="navigation" aria-label="main navigation" data-target="navMenu">
   <div class="navbar-brand">
     <a class="navbar-item" href="#">
-      <img src="./public/images/Logo.png" alt="Matheus Marques - Desenvolvedor e Cientista de Dados" style="max-width:80px; max-height:80px;">
+      <img src="./public/images/2.png" alt="Matheus Marques - Desenvolvedor e Cientista de Dados" style="max-width:80px; max-height:80px;">
     </a>
     <a role="button" class="navbar-burger" aria-label="menu" aria-expanded="false" data-target="navbarBasicExample">
       <span aria-hidden="true"></span>
