--- a/views/partials/navbar.html
+++ b/views/partials/navbar.html
@@ -1,6 +1,6 @@
 <nav class="navbar" role="navigation" aria-label="main navigation" data-target="navMenu">
   <div class="navbar-brand">
-    <a class="navbar-item" href="/index.html">
+    <a class="navbar-item" href="./index.html">
       <img src="./public/images/1.png" alt="Matheus Marques - Desenvolvedor e Cientista de Dados" style="max-width:80px; max-height:80px;">
     </a>
     <a role="button" class="navbar-burger" aria-label="menu" aria-expanded="false" data-target="navbarBasicExample">
@@ -11,7 +11,7 @@
   </div>
   <div id="navbarBasicExample" class="navbar-menu">
     <div class="navbar-start">
-      <a href="/index.html" class="navbar-item">
+      <a href="./index.html" class="navbar-item">
         Início
       </a>
 
